syntax = "proto3";
package types;

option go_package = "github.com/keybittech/awayto-v3/go/pkg/types";

message UserSession {
  repeated string subGroupPaths = 1;
  string userSub = 2;
  string userEmail = 3;
  string groupName = 4;
  string groupId = 5;
  string groupSub = 6;
  string groupExternalId = 7;
  string groupPath = 8;
  string subGroupName = 9;
  string subGroupExternalId = 10;
  string subGroupPath = 11;
  string anonIp = 12;
  string timezone = 13;
  int64 roleBits = 14;
  int64 groupSessionVersion = 15;
  int64 expiresAt = 16;
  bool groupAi = 17;
}
